# 20241203-bazel-rust-axum-fintech-monorepo

./: .gitignore  BUILD  Cargo.toml  README.md  WORKSPACE
src/: main.rs
transaction_core/: BUILD  Cargo.toml
transaction_core/src/: lib.rs
